force-app/main/default/objects/BankAcc__c/BankAcc__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Bank  Acc ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>