force-app/main/default/objects/BankAcc__c/fields/BankAccountCurrency__c.field-meta.xml
<CustomField>
    <fullName>BankAccountCurrency__c</fullName>
    <label>Bank Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VND</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>KHR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KRW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>