force-app/main/default/objects/BankAcc__c/fields/BankAccountNameinEnglish__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNameinEnglish__c</fullName>
    <label>Bank Account Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>