force-app/main/default/objects/BankAcc__c/fields/BankAccountNameLocal__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNameLocal__c</fullName>
    <label>Bank Account Name (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>