force-app/main/default/objects/BankAcc__c/fields/BankAddress__c.field-meta.xml
<CustomField>
    <fullName>BankAddress__c</fullName>
    <label>Bank Address</label>
    <type>TextArea</type>
</CustomField>