force-app/main/default/objects/BankAcc__c/fields/BankBranchName__c.field-meta.xml
<CustomField>
    <fullName>BankBranchName__c</fullName>
    <label>Bank Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>