force-app/main/default/objects/BankAcc__c/fields/BankOfficialName__c.field-meta.xml
<CustomField>
    <fullName>BankOfficialName__c</fullName>
    <label>Bank Official Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>