force-app/main/default/objects/BankAcc__c/fields/BankPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>BankPhoneNumber__c</fullName>
    <label>Bank Phone Number</label>
    <type>Phone</type>
</CustomField>