force-app/main/default/objects/BankAcc__c/fields/BankShortName__c.field-meta.xml
<CustomField>
    <fullName>BankShortName__c</fullName>
    <label>Bank Short Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>