force-app/main/default/objects/BankAcc__c/fields/FullNameofAccountHolder__c.field-meta.xml
<CustomField>
    <fullName>FullNameofAccountHolder__c</fullName>
    <label>Full Name of Account Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>