force-app/main/default/objects/BankAcc__c/fields/FullNameofAuthorizedPerson__c.field-meta.xml
<CustomField>
    <fullName>FullNameofAuthorizedPerson__c</fullName>
    <label>Full Name of Authorized Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>