force-app/main/default/objects/BankAcc__c/fields/InternationalBank__c.field-meta.xml
<CustomField>
    <fullName>InternationalBank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Bank?</label>
    <type>Checkbox</type>
</CustomField>