force-app/main/default/objects/BankAcc__c/fields/SWIFTCode__c.field-meta.xml
<CustomField>
    <fullName>SWIFTCode__c</fullName>
    <label>SWIFT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>