force-app/main/default/objects/BankAcc__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BankAccountNameLocal__c</columns>
    <columns>BankOfficialName__c</columns>
    <columns>BankShortName__c</columns>
    <columns>BankBranchName__c</columns>
    <columns>SWIFTCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>